--- a/app/components/footer/nd-footer.scss
+++ b/app/components/footer/nd-footer.scss
@@ -11,36 +11,37 @@
   padding: 78px 0 107px;
   margin-top: 165px;
 
-  @include screen('xl', max, 2) {
+  @include screen("xl", max, 2) {
     margin-top: 153px;
   }
 
-  @include screen('xlg', max, 2) {
+  @include screen("xlg", max, 2) {
     padding: pxtovw(78, 1660) 0 pxtovw(107, 1660);
     margin-top: pxtovw(153, 1660);
   }
 
-  @include screen('lg', max, 2) {
+  @include screen("lg", max, 2) {
     padding: pxtovw(57, 1366) 0 pxtovw(63, 1366);
     margin-top: pxtovw(100, 1366);
   }
 
-  @include screen('md', max, 2) {
+  @include screen("md", max, 2) {
     padding: pxtovw(50, 960) 0 pxtovw(106, 960);
     margin-top: pxtovw(88, 960);
   }
 
-  @include screen('sm', max, 2) {
+  @include screen("sm", max, 2) {
     padding: pxtovw(55, 375) 0 pxtovw(103, 375);
     margin-top: pxtovw(55, 375);
   }
 
-  .nd-offer-panel ~ &, .nd-search-map-button ~ & {
-    @include screen('md', max, 2) {
+  .nd-offer-panel ~ &,
+  .nd-search-map-button ~ & {
+    @include screen("md", max, 2) {
       padding-bottom: pxtovw(106, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       padding-bottom: pxtovw(163, 375);
     }
   }
@@ -63,32 +64,32 @@
     border-bottom: 1px solid $nd-color-basic-light;
     padding-bottom: 39px;
 
-    @include screen('xl', max, 2) {
+    @include screen("xl", max, 2) {
       @include grid-template-columns(260px 207px 1fr);
 
       padding-bottom: 41px;
     }
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       @include grid-template-columns(pxtovw(260, 1660) pxtovw(207, 1660) 1fr);
 
       padding-bottom: pxtovw(41, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       @include grid-template-columns(pxtovw(234, 1366) pxtovw(183, 1366) 1fr);
 
       padding-bottom: pxtovw(18, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       @include grid-template-columns(54% 46%);
       @include grid-template-rows(auto auto);
 
       padding-bottom: pxtovw(54, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       @include grid-template-columns(100%);
       @include grid-template-rows(auto auto auto);
 
@@ -101,28 +102,28 @@
     box-sizing: border-box;
     padding-right: 30px;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       padding-right: pxtovw(30, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       padding-right: pxtovw(30, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       padding-right: pxtovw(30, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       padding-right: 0;
     }
 
     &:not(:last-child) {
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-bottom: pxtovw(43, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-bottom: pxtovw(48, 375);
       }
     }
@@ -131,31 +132,31 @@
       @include grid-column(1, 2);
       @include grid-row(1, 2);
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         @include grid-column(1, 2);
         @include grid-row(1, 2);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         @include grid-column(1, 2);
         @include grid-row(1, 2);
       }
 
       &:not(:last-child) {
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           margin-bottom: pxtovw(36, 375);
         }
       }
 
       #{$b}__list {
-        @include screen('md', max, 2) {
+        @include screen("md", max, 2) {
           display: flex;
           justify-content: flex-start;
           align-items: center;
           flex-wrap: wrap;
         }
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           display: block;
           column-count: 2;
           column-gap: pxtovw(20, 375);
@@ -164,16 +165,16 @@
       }
 
       #{$b}__link {
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           margin-bottom: pxtovw(12, 375);
         }
 
         &:not(:first-child) {
-          @include screen('md', max, 2) {
+          @include screen("md", max, 2) {
             margin-left: pxtovw(21, 960);
           }
 
-          @include screen('sm', max, 2) {
+          @include screen("sm", max, 2) {
             margin-left: 0;
           }
         }
@@ -184,37 +185,37 @@
       @include grid-column(2, 3);
       @include grid-row(1, 2);
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         @include grid-column(2, 3);
         @include grid-row(1, 2);
 
         padding-right: 0;
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         @include grid-column(1, 2);
         @include grid-row(2, 3);
       }
 
       #{$b}__list {
-        @include screen('md', max, 2) {
+        @include screen("md", max, 2) {
           display: flex;
           justify-content: flex-start;
           align-items: center;
         }
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           justify-content: space-between;
         }
       }
 
       #{$b}__link {
         &:not(:first-child) {
-          @include screen('md', max, 2) {
+          @include screen("md", max, 2) {
             margin-left: pxtovw(45, 960);
           }
 
-          @include screen('sm', max, 2) {
+          @include screen("sm", max, 2) {
             margin-left: 0;
           }
         }
@@ -230,7 +231,7 @@
 
       padding-right: 0;
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         @include grid-column(1, 3);
         @include grid-row(2, 3);
 
@@ -238,7 +239,7 @@
         padding-top: pxtovw(26, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         @include grid-template-columns(100%);
         @include grid-template-rows(auto auto auto);
         @include grid-column(1, 2);
@@ -254,27 +255,26 @@
 
       #{$b}__list {
         column-count: 4;
-        column-fill: auto;
         column-gap: 30px;
 
         @include grid-column(1, 2);
         @include grid-row(2, 3);
 
-        @include screen('lg', max, 2) {
+        @include screen("lg", max, 2) {
           @include grid-column(1, 3);
           @include grid-row(2, 3);
 
           column-gap: pxtovw(30, 1366);
         }
 
-        @include screen('md', max, 2) {
+        @include screen("md", max, 2) {
           column-gap: pxtovw(28, 960);
 
           @include grid-column(1, 2);
           @include grid-row(2, 3);
         }
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           column-count: 2;
           column-gap: pxtovw(20, 375);
 
@@ -289,18 +289,18 @@
         @include grid-align-self(start);
         @include grid-justify-self(end);
 
-        @include screen('lg', max, 2) {
+        @include screen("lg", max, 2) {
           @include grid-column(2, 3);
           @include grid-row(1, 2);
         }
 
-        @include screen('md', max, 2) {
+        @include screen("md", max, 2) {
           @include grid-column(2, 3);
           @include grid-row(2, 3);
           @include grid-align-self(end);
         }
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           @include grid-column(1, 2);
           @include grid-row(3, 4);
           @include grid-align-self(start);
@@ -314,40 +314,40 @@
     font-size: 20px;
     line-height: 1.6;
     font-weight: 700;
-    letter-spacing: -.02em;
+    letter-spacing: -0.02em;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       font-size: pxtovw(20, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       font-size: pxtovw(20, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       font-size: pxtovw(20, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       font-size: pxtovw(20, 375);
     }
 
     &:not(:last-child) {
       margin-bottom: 19px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-bottom: pxtovw(19, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-bottom: pxtovw(12, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-bottom: pxtovw(19, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-bottom: pxtovw(21, 375);
       }
     }
@@ -357,41 +357,41 @@
     display: flex;
     font-size: 17px;
     line-height: 1.65;
-    letter-spacing: -.02em;
+    letter-spacing: -0.02em;
     font-weight: 400;
     column-span: none;
     white-space: nowrap;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       font-size: pxtovw(17, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       font-size: pxtovw(17, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       font-size: pxtovw(15, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       font-size: pxtovw(15, 375);
     }
 
     &_sm-fz13 {
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         font-size: pxtovw(13, 375);
       }
     }
 
     &_sm-lh25 {
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         line-height: 2.55;
       }
     }
 
     &_sm-lh26 {
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         line-height: 2.6;
       }
     }
@@ -407,20 +407,20 @@
     line-height: (28 / 18);
     letter-spacing: normal;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       font-size: pxtovw(18, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       font-size: pxtovw(18, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       line-height: (18 / 15);
       font-size: pxtovw(15, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       font-size: pxtovw(15, 375);
       margin-top: pxtovw(26, 375);
     }
@@ -433,31 +433,31 @@
 
     padding-top: 44px;
 
-    @include screen('xl', max, 2) {
+    @include screen("xl", max, 2) {
       @include grid-template-columns(260px 1fr auto);
 
       padding-top: 42px;
     }
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       @include grid-template-columns(pxtovw(260, 1660) 1fr auto);
 
       padding-top: pxtovw(42, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       @include grid-template-columns(pxtovw(234, 1366) 1fr auto);
 
       padding-top: pxtovw(38, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       @include grid-template-columns(pxtovw(234, 960) 1fr auto);
 
       padding-top: pxtovw(48, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       @include grid-template-columns(1fr 1fr);
       @include grid-template-rows(auto auto);
 
@@ -469,9 +469,9 @@
     display: block;
 
     @include grid-column(1, 2);
-    @include grid-row(1,2);
+    @include grid-row(1, 2);
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -491,25 +491,25 @@
     @include grid-column(2, 3);
     @include grid-row(1, 2);
 
-    @include screen('xl', max, 2) {
+    @include screen("xl", max, 2) {
       max-width: 382px;
     }
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       max-width: pxtovw(382, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       max-width: pxtovw(338, 1366);
       column-gap: pxtovw(30, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       max-width: pxtovw(440, 960);
       column-gap: pxtovw(30, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       column-count: 1;
       column-gap: 0;
       max-width: none;
@@ -526,7 +526,7 @@
     @include grid-row(1, 2);
     @include grid-justify-self(end);
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       @include grid-column(2, 3);
       @include grid-row(1, 2);
     }
@@ -537,41 +537,41 @@
     font-size: 15px;
     line-height: 1.6;
     font-weight: 400;
-    letter-spacing: -.02em;
+    letter-spacing: -0.02em;
     color: $nd-color-gray-text5;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       font-size: pxtovw(15, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       font-size: pxtovw(15, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       font-size: pxtovw(15, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       font-size: pxtovw(15, 375);
     }
 
     &:not(:first-child) {
       margin-top: 50px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-top: pxtovw(50, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-top: pxtovw(39, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-top: pxtovw(49, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-top: 0;
         margin-left: pxtovw(20, 375);
       }
@@ -582,19 +582,19 @@
     &:not(:first-child) {
       margin-top: 17px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-top: pxtovw(17, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-top: pxtovw(12, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-top: pxtovw(38, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-top: pxtovw(20, 375);
       }
     }
