--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -44,6 +44,7 @@ block content
             +e.list
               +nd-link(href="single-offer-v2.html") Spacepool - Single Offer Page (single-offer-v2.html)
               +nd-link(href="single-offer-dp-v2.html") Spacepool - Single Offer Page Daypass (single-offer-dp-v2.html)
+              +nd-link(href="search-v4.html") Spacepool - Search (search-v4.html)
 
           +e.group
             +e.head
