--- a/app/blocks/filter-section/filter-section.scss
+++ b/app/blocks/filter-section/filter-section.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
 
-  @include screen('md', max, 2) {
+  @include screen("md", max, 2) {
     justify-content: flex-start;
   }
 
@@ -18,17 +18,26 @@
     justify-content: flex-start;
     align-items: center;
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       flex: 1;
     }
 
     &:not(:last-child) {
-      @include rule(margin-right, (xl: 27px, xlg: 27, lg: 15, md: 15, sm: 0));
+      @include rule(
+        margin-right,
+        (
+          xl: 27px,
+          xlg: 27,
+          lg: 15,
+          md: 15,
+          sm: 0,
+        )
+      );
     }
   }
 
   &__filter {
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       width: 100%;
     }
   }
@@ -37,33 +46,78 @@
     .modal-output {
       box-shadow: boxShadow(0, 3.2, 7.69511, 0, rgba(0, 0, 0, 0.1), false);
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         box-shadow: boxShadow(0, 3.2, 7.69511, 0, rgba(0, 0, 0, 0.1), 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         box-shadow: boxShadow(0, 3.2, 7.69511, 0, rgba(0, 0, 0, 0.1), 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         box-shadow: boxShadow(0, 3.2, 7.69511, 0, rgba(0, 0, 0, 0.1), 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         box-shadow: 0 0 0 0 transparent;
       }
     }
 
     &:not(:last-child) {
-      @include rule(margin-right, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+      @include rule(
+        margin-right,
+        (
+          xl: 16px,
+          xlg: 16,
+          lg: 16,
+          md: 16,
+          sm: 16,
+        )
+      );
     }
   }
 
   &__button {
-    @include rule(padding-left, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 12));
-    @include rule(padding-right, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 12));
-    @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
-    @include rule(width, (xl: 40px, xlg: 40, lg: 40, md: 40, sm: 44));
+    @include rule(
+      padding-left,
+      (
+        xl: 13px,
+        xlg: 13,
+        lg: 13,
+        md: 13,
+        sm: 12,
+      )
+    );
+    @include rule(
+      padding-right,
+      (
+        xl: 13px,
+        xlg: 13,
+        lg: 13,
+        md: 13,
+        sm: 12,
+      )
+    );
+    @include rule(
+      font-size,
+      (
+        xl: 15px,
+        xlg: 15,
+        lg: 15,
+        md: 15,
+        sm: 15,
+      )
+    );
+    @include rule(
+      width,
+      (
+        xl: 40px,
+        xlg: 40,
+        lg: 40,
+        md: 40,
+        sm: 44,
+      )
+    );
 
     display: flex;
     justify-content: flex-start;
@@ -72,7 +126,7 @@
     height: 100%;
     box-sizing: border-box;
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       border-radius: 50%;
       background-color: $nd-color-basic-light;
       box-shadow: 0px wPxtovw(3.2, sm) wPxtovw(7.69511, sm) rgba(0, 0, 0, 0.3);
@@ -87,7 +141,29 @@
     }
 
     &:not(:last-child) {
-      @include rule(margin-right, (sm: 17));
+      @include rule(
+        margin-right,
+        (
+          sm: 17,
+        )
+      );
+    }
+
+    &_v2 {
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+
+      @include rule(
+        height,
+        (
+          xl: 44px,
+          xlg: 44,
+          lg: 44,
+          md: 44,
+          sm: 44,
+        )
+      );
     }
   }
 
@@ -97,23 +173,216 @@
     flex: none;
     height: 100%;
 
-    @include rule(width, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+    @include rule(
+      width,
+      (
+        xl: 15px,
+        xlg: 15,
+        lg: 15,
+        md: 15,
+        sm: 15,
+      )
+    );
     // @include rule(height, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+
+    &_filter {
+      fill: $nd-color-basic;
+
+      @include rule(
+        width,
+        (
+          xl: 25px,
+          xlg: 25,
+          lg: 25,
+          md: 25,
+          sm: 25,
+        )
+      );
+
+      @include rule(
+        height,
+        (
+          xl: 22px,
+          xlg: 22,
+          lg: 22,
+          md: 22,
+          sm: 22,
+        )
+      );
+    }
 
     &_back {
       fill: $nd-color-basic;
 
-      @include rule(width, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
-      @include rule(height, (sm: 44));
+      @include rule(
+        width,
+        (
+          xl: 20px,
+          xlg: 20,
+          lg: 20,
+          md: 20,
+          sm: 20,
+        )
+      );
+      @include rule(
+        height,
+        (
+          sm: 44,
+        )
+      );
     }
 
     &_cross {
-      @include rule(width, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+      fill: currentColor;
+
+      @include rule(
+        width,
+        (
+          xl: 12px,
+          xlg: 12,
+          lg: 12,
+          md: 12,
+          sm: 12,
+        )
+      );
       // @include rule(height, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
     }
 
     &:not(:last-child) {
-      @include rule(margin-right, (xl: 12px, xlg: 12, lg: 12, md: 12, sm: 12));
+      @include rule(
+        margin-right,
+        (
+          xl: 12px,
+          xlg: 12,
+          lg: 12,
+          md: 12,
+          sm: 12,
+        )
+      );
+    }
+
+    &:not(:first-child) {
+      @include rule(
+        margin-left,
+        (
+          xl: 12px,
+          xlg: 12,
+          lg: 12,
+          md: 12,
+          sm: 12,
+        )
+      );
+    }
+  }
+
+  &__modal {
+    @include rule(
+      border-radius,
+      (
+        lg: 0 0 3 3,
+        md: 0 0 3 3,
+        sm: 0 0 3 3,
+      )
+    );
+
+    @include screen("sm", max, 2) {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: $nd-color-basic-light;
+      opacity: 0;
+      transition: opacity $ease-main;
+      width: 100%;
+      box-shadow: 0 wPxtovw(4, "sm") wPxtovw(29, "sm") 0 rgba(0, 0, 0, 0.25);
+    }
+
+    &.is-opened,
+    &.is-animated {
+      display: block;
+      opacity: 1;
+    }
+
+    &-header {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      box-sizing: border-box;
+
+      @include rule(
+        height,
+        (
+          xl: 60px,
+          xlg: 60,
+          lg: 60,
+          md: 60,
+          sm: 60,
+        )
+      );
+
+      @include rule(
+        padding,
+        (
+          sm: 8 60,
+        )
+      );
+    }
+
+    &-title {
+      font-family: $font-stolzl;
+      font-weight: 400;
+      letter-spacing: -0.015em;
+
+      @include rule(
+        font-size,
+        (
+          xl: 16px,
+          xlg: 16,
+          lg: 16,
+          md: 16,
+          sm: 16,
+        )
+      );
+    }
+
+    #{$b}__button {
+      position: absolute;
+      z-index: 2;
+
+      @include rule(
+        top,
+        (
+          sm: 8,
+        )
+      );
+      @include rule(
+        left,
+        (
+          sm: 8,
+        )
+      );
+    }
+  }
+
+  &_v2 {
+    #{$b} {
+      &__item {
+        @include screen("sm", max, 2) {
+          position: relative;
+          z-index: 2;
+        }
+
+        &:not(:first-child) {
+          @include rule(
+            margin-left,
+            (
+              sm: 17,
+            )
+          );
+        }
+      }
     }
   }
 }
