--- a/app/blocks/modal/modal.pug
+++ b/app/blocks/modal/modal.pug
@@ -10,6 +10,12 @@ mixin modal(data)
         +e.header
           +e.title!=data.header2.title
           +nd-link-icon('cross-bold', 'button')._pad10.__clear.js-modal-reset-value(type="reset") Clear Filter
+      if data.header3
+        +e.header
+          +nd-link('button')._pad10.__clear.nd-hide-from-sm.js-modal-reset-value(type="reset") Clear
+          +e.title!=data.header3.title
+          +e.BUTTON.close.js-close-modal(type="button") Close
+
       +e.content
         if data.describe
           +e.describe
@@ -20,5 +26,10 @@ mixin modal(data)
           if data.footer.view === 'range'
             +nd-button('button')(type="reset")._black._pad10.__reset.js-modal-reset-value Clear
             +nd-button('button')._pad10(type="button").__setter.js-modal-set-value Set filter
+          else if data.footer.view === 'date'
+            +nd-link-icon('cross-bold', 'button')._pad10.__clear.nd-hide-sm.js-clear-modal-reset-value(type="button" disabled) Clear Filter
+            +nd-button('button')._pad10(type="button").__setter.js-modal-set-value
+              span.nd-hide-sm Show available
+              span.nd-hide-from-sm Set date and time
           else
             +nd-button('button')._pad10._wide.__setter.js-modal-set-value Set filter
