--- a/app/blocks/modal/modal.scss
+++ b/app/blocks/modal/modal.scss
@@ -618,6 +618,131 @@
     }
   }
 
+  &__calendar {
+    display: flex;
+    flex-wrap: wrap;
+
+    &-section {
+      box-sizing: border-box;
+
+      @include rule(
+        width,
+        (
+          xl: 50%,
+          sm: 100%,
+        )
+      );
+
+      &:not(:first-child) {
+        border-left: 1px solid $nd-color-border6;
+
+        @include screen("sm", max, 2) {
+          border-left: none;
+        }
+      }
+
+      &_time {
+        @include rule(
+          padding,
+          (
+            xl: 30px,
+            xlg: 30,
+            lg: 30,
+            md: 30,
+            sm: 18 22 60,
+          )
+        );
+      }
+    }
+
+    &-title {
+      font-family: $font-stolzl;
+      font-weight: 400;
+      width: 100%;
+      text-align: center;
+
+      @include rule(
+        font-size,
+        (
+          xl: 15px,
+          xlg: 15,
+          lg: 15,
+          md: 15,
+          sm: 15,
+        )
+      );
+
+      @include screen("sm", max, 2) {
+        text-align: left;
+      }
+    }
+
+    &-time {
+      display: flex;
+      justify-content: center;
+      flex-wrap: nowrap;
+
+      @include rule(
+        gap,
+        (
+          xl: 10px,
+          xlg: 10,
+          lg: 10,
+          md: 10,
+          sm: 10,
+        )
+      );
+
+      &:not(:first-child) {
+        @include rule(
+          margin-top,
+          (
+            xl: 30px,
+            xlg: 30,
+            lg: 30,
+            md: 30,
+            sm: 20,
+          )
+        );
+      }
+
+      .nd-form-box {
+        flex: 1;
+      }
+    }
+
+    &-divider {
+      flex: none;
+      display: block;
+      box-sizing: border-box;
+      border-style: solid;
+      border-color: $nd-color-main;
+      align-self: center;
+
+      @include rule(
+        border-width,
+        (
+          xl: 1px,
+          xlg: 1,
+          lg: 1,
+          md: 1,
+          sm: 1,
+        )
+      );
+
+      @include rule(
+        width,
+        (
+          xl: 8px,
+          xlg: 8,
+          lg: 8,
+          md: 8,
+          sm: 8,
+        )
+      );
+    }
+  }
+
   &_small {
     #{$b} {
       &__wrapper {
@@ -787,6 +912,274 @@
             sm: 25,
           )
         );
+      }
+    }
+  }
+
+  &_v2 {
+    #{$b} {
+      &__wrapper {
+        @include rule(
+          width,
+          (
+            xl: 780px,
+            xlg: 780,
+            lg: 780,
+            md: 684,
+            sm: 100%,
+          )
+        );
+
+        @include rule(
+          max-height,
+          (
+            xl: 600px,
+            xlg: 600,
+            lg: 600,
+            md: 600,
+            sm: 100vh,
+          )
+        );
+      }
+
+      &__header {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        border-bottom: 1px solid $nd-color-border6;
+        flex: none;
+        box-sizing: border-box;
+
+        @include rule(
+          padding,
+          (
+            xl: 0 70px,
+            xlg: 0 70,
+            lg: 0 70,
+            md: 0 70,
+            sm: 0 60,
+          )
+        );
+
+        @include rule(
+          height,
+          (
+            xl: 70px,
+            xlg: 70,
+            lg: 70,
+            md: 70,
+            sm: 60,
+          )
+        );
+
+        @include screen("sm", max, 2) {
+          border-bottom: none;
+        }
+
+        #{$b}__clear {
+          position: absolute;
+          top: 50%;
+          transform: translate3d(0, -50%, 0);
+
+          @include rule(
+            left,
+            (
+              sm: 25,
+            )
+          );
+        }
+      }
+
+      &__close {
+        position: absolute;
+
+        @include rule(
+          top,
+          (
+            xl: 15px,
+            xlg: 15,
+            lg: 15,
+            md: 15,
+            sm: 0,
+          )
+        );
+
+        @include rule(
+          right,
+          (
+            xl: 15px,
+            xlg: 15,
+            lg: 15,
+            md: 15,
+            sm: 0,
+          )
+        );
+
+        @include rule(
+          width,
+          (
+            xl: 40px,
+            xlg: 40,
+            lg: 40,
+            md: 40,
+            sm: 60,
+          )
+        );
+        @include rule(
+          height,
+          (
+            xl: 40px,
+            xlg: 40,
+            lg: 40,
+            md: 40,
+            sm: 60,
+          )
+        );
+        @include rule(
+          background-size,
+          (
+            xl: 14px,
+            xlg: 14,
+            lg: 14,
+            md: 14,
+            sm: 12,
+          )
+        );
+      }
+
+      &__title {
+        text-align: center;
+        font-weight: 400;
+
+        @include rule(
+          font-size,
+          (
+            xl: 20px,
+            xlg: 20,
+            lg: 20,
+            md: 20,
+            sm: 17,
+          )
+        );
+      }
+
+      &__content {
+        padding: 0;
+      }
+
+      &__footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex: none;
+        border-top: 1px solid $nd-color-border6;
+        box-sizing: border-box;
+        width: 100%;
+
+        @include rule(
+          padding,
+          (
+            xl: 0 20px 0 30px,
+            xlg: 0 20 0 30,
+            lg: 0 20 0 30,
+            md: 0 20 0 30,
+            sm: 0 17,
+          )
+        );
+
+        @include rule(
+          height,
+          (
+            xl: 60px,
+            xlg: 60,
+            lg: 60,
+            md: 60,
+            sm: 60,
+          )
+        );
+
+        @include screen("sm", max, 2) {
+          border-top: none;
+        }
+      }
+
+      &__clear {
+        font-weight: 600;
+
+        @include rule(
+          font-size,
+          (
+            xl: 15px,
+            xlg: 15,
+            lg: 15,
+            md: 15,
+            sm: 15,
+          )
+        );
+
+        @include screen("sm", max, 2) {
+          font-weight: 400;
+        }
+
+        .nd-link {
+          &__icon {
+            @include rule(
+              width,
+              (
+                xl: 10px,
+                xlg: 10,
+                lg: 10,
+                md: 10,
+                sm: 10,
+              )
+            );
+            @include rule(
+              height,
+              (
+                xl: 10px,
+                xlg: 10,
+                lg: 10,
+                md: 10,
+                sm: 10,
+              )
+            );
+
+            &:not(:last-child) {
+              @include rule(
+                margin-right,
+                (
+                  xl: 16px,
+                  xlg: 16,
+                  lg: 16,
+                  md: 16,
+                  sm: 16,
+                )
+              );
+            }
+          }
+        }
+      }
+
+      &__setter {
+        flex: none;
+
+        @include rule(
+          min-width,
+          (
+            xl: 230px,
+            xlg: 230,
+            lg: 230,
+            md: 230,
+            sm: 230,
+          )
+        );
+
+        @include screen("sm", max, 2) {
+          flex: 1;
+        }
       }
     }
   }
