--- a/app/components/filter/nd-filter.pug
+++ b/app/components/filter/nd-filter.pug
@@ -8,3 +8,16 @@ mixin nd-filter()
       +modal-output-special({placeholder: 'Location', default: 'Anywhere', clear: true})._topalways._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
     +e.item_submit.nd-hide-sm
       +nd-button-icon('button', {icon: 'search', notext: true})._pad10.__submit(type="submit" form="search-filter")
+
+mixin nd-filter-advanced()
+  +b.nd-filter_v2&attributes(attributes)
+    +e.item_type
+      +modal-output-special({placeholder: 'Office type', default: 'Any', clear: true})._special_v2._type._topalways._notoggle.js-toggle-modal(data-modal-target="filter-type" data-modal-output-type="offer")
+    +e.item_team
+      +modal-output-special({placeholder: 'Team <span class="nd-hide-sm">&nbsp;size</span>', default: 'Any', clear: true})._special_v2._team._topalways._notoggle.js-toggle-modal(data-modal-target="filter-team" data-modal-output-type="team")
+    +e.item_location
+      +modal-output-special({placeholder: 'Location', default: 'Anywhere', clear: true})._special_v2._topalways._notoggle._location.js-toggle-modal(data-modal-target="filter-location" data-modal-output-type="city")
+    +e.item_date
+      +modal-output-special({placeholder: 'When', default: '', clear: true })._special_v2._topalways._notoggle._date.js-toggle-modal(data-modal-target="filter-date" data-modal-output-type="date")
+    +e.item_submit
+      +nd-button-icon('button', {iconLeft: true, icon: 'search'})._pad10.__submit(type="submit" form="search-filter") 457 results
